--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.13",
+    "framer-motion": "^11.2.11",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-typical": "^0.1.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "graphql": "^16.8.2",
+    "graphql-request": "^7.0.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
